# lite-xl

./: meson.build  meson_options.txt
cmake/: Findluau.cmake
data/core/: init.lua  style.lua
docs/api/: system.lua  window.lua
src/: CMakeLists.txt  ipc.c  ipc.h  main.c  meson.build  rencache.c  renderer.c  renderer.h  renwindow.c
src/api/: CMakeLists.txt  api.c  api.h  ipc.c  process.c  regex.c  renderer.c  system.c  utf8.c  window.c
src/imgui/: cimgui.cpp  cimgui.h  meson.build
src/imgui/backends/: meson.build
